--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
@@ -1,19 +1,61 @@
+@import './assets/scss/core/_colors';
+
 body, .card {
     background-color: #efebe9 !important;
+    color: $white !important;
 }
 
+button.btn { font-weight: bold; }
+img.menu-image { height: 50px; }
 
-
-.map { 
+.flex-grow { flex-grow: 1; }
+.map {
     height: 100%;
     min-height: 300px;
     width: 100%;
 }
+.selected { text-decoration:underline; }
 
-img.menu-image {
-    height: 50px;
+.stylish-color-text { color: $stylish-color; }
+.stylish-color-dark-text { color: $stylish-color-dark; }
+
+div h2 {
+    text-align: center;
+    font-weight:bold;
+    padding:1em 0 .5em 0;
 }
 
-.selected {
-    text-decoration:underline;
+.bottom-border {
+    border-bottom:solid 1px;
+}
+
+div.inner-container {
+    max-width: 64rem;
+    margin-left: auto;
+    margin-right: auto;
+
+
+    div.inner-container-row {
+        padding: 1em;
+        border-bottom: 1px solid;
+        display: flex;
+        align-items: stretch;
+
+        div.left-frame {
+            text-align: center;
+            font-size: 1.5em;
+            font-weight: bold;
+            background-color: $white;
+            padding: 1em;
+            width: 165px;
+            color: $stylish-color-dark
+        }
+
+        div.right-frame {
+            font-weight:bold;
+            font-size: 1.2em;
+            padding: 1em;
+            flex-grow: 1;
+        }
+    }
 }
