--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
@@ -18,6 +18,7 @@ img.menu-image { height: 50px; }
 
 .stylish-color-text { color: $stylish-color; }
 .stylish-color-dark-text { color: $stylish-color-dark; }
+.light-grey-text { color: $grey-lighten-4; }
 
 div h2 {
     text-align: center;
@@ -25,9 +26,6 @@ div h2 {
     padding:1em 0 .5em 0;
 }
 
-.bottom-border {
-    border-bottom:solid 1px;
-}
 
 div.inner-container {
     max-width: 64rem;
@@ -53,8 +51,7 @@ div.inner-container {
 
         div.right-frame {
             font-weight:bold;
-            font-size: 1.2em;
-            padding: 1em;
+            padding: .5em 1em;
             flex-grow: 1;
         }
     }
