--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
@@ -42,6 +42,11 @@ div.inner-container, .mha {
 .border-dotted.bottom {
     border-bottom: dashed 1px $grey-lighten-4;
 }
+
+h2.header {
+    margin-bottom: 0;
+}
+
 .border-dotted.left {
     border-left: dashed 1px $grey-lighten-4;
 }
