--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
@@ -5,6 +5,10 @@ body, .card {
     color: $white !important;
 }
 
+.serif {
+    font-family:'Times New Roman', Times, serif
+}
+
 button.btn {
     font-weight: bold;
 }
