padding on splash was messed

--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
@@ -32,6 +32,8 @@ div.modal-content {
 .stylish-color-dark-text { color: $stylish-color-dark; }
 .light-grey-text { color: $grey-lighten-4; }
 
+.panel-2 { background-color: $amber-darken-2 }
+
 div h2 {
     text-align: center;
     font-weight:bold;
