background for loading and no logo image

--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
@@ -1,7 +1,7 @@
 @import './assets/scss/core/_colors';
 
 body, .card {
-    background-color: #efebe9 !important;
+    background-color: $primary-color !important;
     color: $white !important;
 }
 
