cart is built but does not cehck out yet

--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/components/NavMenu.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/components/NavMenu.scss
@@ -5,3 +5,9 @@ img.title-logo { height: 50px; }
 .nav-menu a {
     color: $white
 }
+
+button.cart-indicator {
+    margin: 0 6px;
+    font-weight: normal;
+    padding: .84rem;
+}
