--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/components/NavMenu.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/components/NavMenu.scss
@@ -10,4 +10,5 @@ button.cart-indicator {
     margin: 0 6px;
     font-weight: normal;
     padding: .84rem;
+    background-color: $secondary-color-dark !important
 }
