--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/components/ShoppingCart.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/components/ShoppingCart.scss
@@ -48,7 +48,8 @@
         display:block;
         font-size: 1.5rem;
         text-align: center;
-        background-color: $pink-base;
+        background-color: $secondary-color-dark;
+        color: $white;
         margin-bottom: .5rem
     }
 
