--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/components/ShoppingCart.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/components/ShoppingCart.scss
@@ -61,9 +61,12 @@
     #cart-total {
         margin-top: .5rem;
         border-top: dashed 1px;
-        display: flex;
-        justify-content: space-between;
         padding: .5rem 1rem;
+
+        div {
+            display: flex;
+            justify-content: space-between;
+        }
     }
 
     #cart-checkout-button {
