--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/components/ShoppingCart.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/components/ShoppingCart.scss
@@ -43,7 +43,7 @@
     }
 
     ul {
-        overflow-y: scroll;
+        overflow-y: auto;
         padding: 0;
         margin: 0;
         list-style-type: none;
@@ -86,6 +86,10 @@
 
         .sq-fieldset {
             padding-bottom: 1rem
+        }
+
+        select {
+            background-color: #f5f5f5
         }
     }
 
