trying new appsettings

--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/components/ShoppingCart.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/components/ShoppingCart.scss
@@ -61,7 +61,7 @@
     #cart-total {
         margin-top: .5rem;
         border-top: dashed 1px;
-        padding: .5rem 1rem;
+        padding: .5rem 0;
 
         div {
             display: flex;
