--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/custom.scss
@@ -93,4 +93,10 @@ div.inner-container {
         width: 100%;
         color: $stylish-color-dark
     }
+
+    div.body {
+        h3 {
+            padding: .5em;
+        }
+    }
 }
