--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/assets/scss/core/_mixins.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/assets/scss/core/_mixins.scss
@@ -184,8 +184,8 @@
   // later on to override this initial width.
   width: 100%;
   min-height: 1px; // Prevent collapsing
-  padding-right: ($grid-gutter-width / 2);
-  padding-left: ($grid-gutter-width / 2);
+  padding-right: calc($grid-gutter-width / 2);
+  padding-left: calc($grid-gutter-width / 2);
 }
 
 @mixin make-col($size, $columns: $grid-columns) {
