--- a/Naspinski.FoodTruck.WebApp/ClientApp/src/components/ShoppingCart.scss
+++ b/Naspinski.FoodTruck.WebApp/ClientApp/src/components/ShoppingCart.scss
@@ -99,7 +99,7 @@
         .half {
             float: left;
             width: calc((100% - 10px) / 2);
-            padding: 0;
+            padding: 1em 0 0 0;
             margin: 0 10px 0 0;
         }
 
