--- a/Naspinski.FoodTruck.WebApp/clientapp/src/assets/scss/_custom-styles.scss
+++ b/Naspinski.FoodTruck.WebApp/clientapp/src/assets/scss/_custom-styles.scss
@@ -1,3 +1,4 @@
+@import "core/bootstrap/variables";
 // Your custom styles
 
 
@@ -20,4 +21,13 @@ div.center-body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+div.terms-container {
+    text-align: right;
+    a {
+        color: $link-color;
+        font-weight: normal;
+        text-transform: none;
+    }
 }
