--- a/Naspinski.FoodTruck.WebApp/clientapp/src/assets/scss/_custom-styles.scss
+++ b/Naspinski.FoodTruck.WebApp/clientapp/src/assets/scss/_custom-styles.scss
@@ -25,6 +25,7 @@ div.center-body {
 
 div.terms-container {
     text-align: right;
+    font-size: .8rem;
     a {
         color: $link-color;
         font-weight: normal;
